--- a/views/facs/facture.ejs
+++ b/views/facs/facture.ejs
@@ -1,4 +1,4 @@
-<%- include('./components/Navbar.ejs'); %>
+<%- include('../components/Navbar.ejs'); %>
     <div class="container">
         <div class="row ">
             <div class="col-md-5 my-2 mx-auto">
