--- a/views/item.ejs
+++ b/views/item.ejs
@@ -42,6 +42,6 @@
 <script>
 
   rediriger = (val)=>{
-    window.location.replace("/facture/"+val)
+    window.location.replace("/facs/facture/"+val)
   }
 </script>
