--- a/views/Admin/items.ejs
+++ b/views/Admin/items.ejs
@@ -1,5 +1,5 @@
 <%- include('../components/Navbar.ejs'); %>
-
+<!-- 
 <div class="row">
   <div class="col-3 mx-auto">
     <% 
@@ -11,13 +11,14 @@
     %>
 
   </div>
-</div>
+</div> -->
 
 
 <div class="container card-group">
-  <button   type="button" class="mt-3 ml-3 btn btn-primary" onclick="rediriger();" > Ajouter un serie </button>
-  <br/> 
-  <br/> 
+  <div class="row">
+    <button   type="button" class="mt-3 ml-3 btn btn-primary" onclick="rediriger();" > Ajouter un serie </button>
+
+  </div>
   <% locals.items.forEach(e=> { %>
 
       <div class="row mt-5 mx-md-5">
@@ -36,6 +37,7 @@
                     <%= e.title %>
                 </div>
                   <div class="d-flex ">
+                  <!-- Button Modification -->
                 <form  action="<%= '/admin/updateItem/'+e._id %> " method="get">
                   <button type="submit" class="btn btn-sm btn-info ">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="20" fill="white" class="bi bi-pencil-fill" viewBox="0 0 16 16">
@@ -43,7 +45,7 @@
                     </svg>
                   </button>
                 </form>
-
+                <!-- Button Suppression -->
                 <form style="margin-left: 10px;"  action="<%= '/admin/deleteItem/'+e._id %> " method="post">
                   <button type="submit" class="btn btn-sm btn-danger"> 
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="20" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
