--- a/views/Admin/login.ejs
+++ b/views/Admin/login.ejs
@@ -26,6 +26,7 @@
                     </div>
                     <% } %>
                         <form action="/admin/login" method="post" class="card p-4">
+                            <h3 class="text-center">Admin</h3>
                             <div class="mb-3">
                                 <label for="exampleInputEmail1" class="form-label">Email</label>
                                 <input type="email" name="email" class="form-control" id="exampleInputEmail1">
