--- a/views/Admin/updateItem.ejs
+++ b/views/Admin/updateItem.ejs
@@ -17,7 +17,7 @@
             <input type="text" name="price" class="form-control" placeholder="prix">
           </div>
           <div class="my-3">
-            <input type="text" name="content" class="form-control" placeholder="description">
+            <textarea  type="text" name="content" class="form-control" placeholder="description"></textarea>
           </div>
           <div class="mb-3">
             <select name="genre" class="form-select">
