--- a/views/Admin/items.ejs
+++ b/views/Admin/items.ejs
@@ -13,12 +13,16 @@
   </div>
 </div> -->
 
+<!-- Ajouter une serie -->
+  
+  <div class="col-sm">
+    <button style="margin-left: 165px;"  type="button" class="mt-3 ml-3 btn btn-primary" onclick="rediriger();" > Ajouter un serie </button>
+  </div>
+
+
 
 <div class="container card-group">
-  <div class="row">
-    <button   type="button" class="mt-3 ml-3 btn btn-primary" onclick="rediriger();" > Ajouter un serie </button>
-
-  </div>
+  
   <% locals.items.forEach(e=> { %>
 
       <div class="row mt-5 mx-md-5">
@@ -37,6 +41,7 @@
                     <%= e.title %>
                 </div>
                   <div class="d-flex ">
+
                   <!-- Button Modification -->
                 <form  action="<%= '/admin/updateItem/'+e._id %> " method="get">
                   <button type="submit" class="btn btn-sm btn-info ">
@@ -45,6 +50,7 @@
                     </svg>
                   </button>
                 </form>
+
                 <!-- Button Suppression -->
                 <form style="margin-left: 10px;"  action="<%= '/admin/deleteItem/'+e._id %> " method="post">
                   <button type="submit" class="btn btn-sm btn-danger"> 
