--- a/views/Admin/addItem.ejs
+++ b/views/Admin/addItem.ejs
@@ -1,3 +1,5 @@
+<!-- MOHSSINE AIT BOUKDIR - MOHAMMED ALOUT -->
+
 <%- include('../components/Navbar.ejs'); %>
   <div class="container p-5">
     <div class="row justify-content-center">
