--- a/views/Admin/items.ejs
+++ b/views/Admin/items.ejs
@@ -1,17 +1,6 @@
+<!-- MOHSSINE AIT BOUKDIR - MOHAMMED ALOUT -->
+
 <%- include('../components/Navbar.ejs'); %>
-<!-- 
-<div class="row">
-  <div class="col-3 mx-auto">
-    <% 
-
-    if (locals.ajout ) { %>
-      <div class="alert alert-primary" role="alert"><%= locals.ajout %></div>
-    <% } 
-
-    %>
-
-  </div>
-</div> -->
 
 <!-- Ajouter une serie -->
   
