--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
+<!-- MOHSSINE AIT BOUKDIR - MOHAMMED ALOUT -->
+
 <%- include('./components/Navbar.ejs'); %>
   <%- include('./components/ClassificationBar.ejs'); %>
     <div class="container ">
