--- a/views/item.ejs
+++ b/views/item.ejs
@@ -1,5 +1,6 @@
-<%- include('./components/Navbar.ejs'); %>
+<!-- MOHSSINE AIT BOUKDIR - MOHAMMED ALOUT -->
 
+<%- include('./components/Navbar.ejs'); %>
 
 <div class="container">
 
