--- a/views/components/ClassificationBar.ejs
+++ b/views/components/ClassificationBar.ejs
@@ -1,3 +1,4 @@
+<!-- MOHSSINE AIT BOUKDIR - MOHAMMED ALOUT -->
 
     <div class="container mt-4 mb-2    p-md-4 mb-4 text-white rounded  " style="background-color: #303030;">
        
